--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -10,6 +10,10 @@ body {
     --border-color: #5b6369;
     --element-bg: #4e5357;
     --text-color-2: #fff;
+    --error-bg: #ff4d4d;
+    --error-border: #a76e6e;
+    --error-bg-hover: #e1643b;
+    --disabled: #4d525d;
     margin: 2rem;
 }
 
@@ -30,11 +34,23 @@ button {
 }
 
 button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: var(--primary-color);
     color: var(--text-color-2);
     border: none;
     cursor: pointer;
     transition: background-color 0.2s box-shadow 0.2s transform 0.2s;
+    width: 100%;
+    height: 4rem;
+}
+
+button img {
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
+  display: block;
 }
 
 button:hover {
@@ -46,6 +62,22 @@ button:active {
     box-shadow: 0 0px 5px 2px rgba(0, 0, 0, 0.15);
 }
 
+button:disabled {
+    background-color: var(--disabled);
+}
+
+.error {
+    background-color: var(--error-bg);
+    color: var(--text-color-2);
+    border: 1px solid var(--error-border);
+    font-weight: bold;
+    transition: background-color 0.2s box-shadow 0.2s transform 0.2s;
+}
+
+.error:hover {
+    background-color: var(--error-bg-hover);
+}
+
 .centered-div {
     position: absolute;
     top: 50%;
@@ -54,7 +86,7 @@ button:active {
     width: 40%;
 }
 
-.centered-div > * {
+.centered-div>* {
     width: 100%;
     max-width: 400px;
 }
