--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -8,6 +8,7 @@ body {
     --primary-color: #558a68;
     --secondary-color: #547e6a;
     --border-color: #5b6369;
+    --border-color-accent: #879d83;
     --element-bg: #4e5357;
     --text-color-2: #fff;
     --error-bg: #ff4d4d;
@@ -46,7 +47,7 @@ button {
     align-items: center;
     background-color: var(--primary-color);
     color: var(--text-color-2);
-    border: none;
+    border: 1px solid var(--border-color-accent);
     cursor: pointer;
     transition: background-color 0.2s box-shadow 0.2s transform 0.2s;
     width: 100%;
@@ -54,10 +55,17 @@ button {
 }
 
 button img {
-  max-width: 100%;
-  max-height: 100%;
-  height: auto;
-  display: block;
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+    display: block;
+}
+
+.txcpapi {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-bottom: 2rem;
 }
 
 button:hover {
@@ -106,6 +114,7 @@ button:disabled {
     color: white;
     cursor: pointer;
     border-radius: 0.375rem;
+    border: 1px solid var(--border-color-accent);
 }
 
 .box {
