--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -98,15 +98,15 @@ button:disabled {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-30%, -60%);
+    transform: translate(-50%, -50%);
     width: 40%;
-}
-
-.centered-div>* {
-    width: 100%;
     max-width: 400px;
 }
 
+.centered-div > * {
+    width: 100%;
+    max-width: 400px;
+}
 
 .custom-file-label {
     display: inline-block;
@@ -127,3 +127,61 @@ button:disabled {
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
+
+nav {
+    width: 30%;
+    text-align: center;
+    font-weight: light;
+    color: var(--text-color-2);
+    border: solid 1px var(--border-color);
+    border-radius: 1rem;
+    display: grid;   
+    position: fixed;
+    backdrop-filter: blur(3px) brightness(60%) contrast(70%);
+    bottom: 2rem;
+    left: 35%;
+    margin-bottom: 1rem;
+    grid-auto-flow: column;
+}
+nav a {
+    grid-row: 1fr;
+}
+a.selected {
+  font-style: italic;
+}
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 1rem 0;
+    font-family: system-ui, sans-serif;
+    font-size: 0.95rem;
+    background: var(--element-bg);
+    border-radius: 12px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+  }
+
+  thead {
+    background-color: var(--element-bg);
+    color: var(--text-color-2);
+    text-align: left;
+  }
+
+  th, td {
+    padding: 12px 16px;
+    border-bottom: 1px solid --border-color;
+  }
+
+  tr:last-child td {
+    border-bottom: none;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
+
+  h2 {
+    font-weight: bold;
+    font-size: large;
+    margin-bottom: 1rem;
+  }
