--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -5,7 +5,6 @@ body {
   font-family: "Noto Sans", sans-serif;
   background: var(--background-color, #353637);
   color: var(--text-color, #edf4da);
-  margin: 2rem;
 
   /* Color tokens */
   --background-color: #353637;
@@ -121,6 +120,7 @@ button img {
 .advanced {
   display: inline-flex;
   align-items: center;
+  margin: 2rem; 
   gap: 0.5rem;
 }
 
@@ -152,7 +152,7 @@ button img {
 
 /* === FILE LIST === */
 .box {
-  background-color: var(--element-bg);
+  background-color: var(--background-color);
   border: 1px solid var(--border-color);
   padding: 1rem;
   border-radius: 0.375rem;
