--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -71,6 +71,27 @@ select {
   padding-right: 2.5em;
 }
 
+.checkbox {
+  display: inline-flex;
+  align-items: center;
+  margin: 2rem; 
+  gap: 0.5rem;
+}
+
+.checkbox span {
+  /* width: 50x !important;
+  height: 50px !important; */
+  border-radius: 0.375rem;
+  /* transform: scale(1.5); */
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.15);
+}
+
+.checkbox span img {
+  user-select: none;
+  pointer-events: none;
+  -webkit-user-drag: none;
+}
+
 /* === BUTTONS === */
 button {
   display: flex;
@@ -170,7 +191,7 @@ button img {
   max-width: 400px;
 }
 
-.centered-div *:not(nav):not(.box) {
+.centered-div *:not(nav):not(.box):not(.checkbox) {
   width: 100% !important;
   max-width: 100% !important;
   box-sizing: border-box;
