--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -185,14 +185,32 @@ button img {
   border-radius: 0.375rem;
   margin: 1rem 0;
   box-shadow: inset 0 0 15px 5px rgba(0, 0, 0, 0.3);
+  position: relative;
+  left: 5%;
+  width: 90%;
+  word-wrap: break-word;
+  list-style-type: none;
 }
+
+.box li { 
+  padding-left: 0.5em;
+  bottom: 0.5em;
+}
+
+.box li::marker {
+  content: url('file.svg');
+  width: 1.2em;
+  height: 1.2em;
+  vertical-align: middle;
+}
+
 
 /* === LAYOUT === */
 .centered-div {
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0%);
   width: 100%;
   max-width: 400px;
   overflow: auto;
