--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -17,6 +17,8 @@
   --disabled: #4d525d;
 }
 
+
+
 body {
   font-family: "Noto Sans", sans-serif;
   background: var(--background-color, #353637);
@@ -153,10 +155,8 @@ button img {
 }
 
 .advanced span {
-  width: 1rem;
-  height: 1rem;
+  margin-right: 0.5rem;
   border-radius: 0.375rem;
-  transform: scale(1.5);
   position: relative;
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.15);
 }
